JavaSpringBoot/uploader-excel/ingress/ingress-uploader-excel.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: uploader-excel-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /upload
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - http:
        paths:
          - path: /academy/upload
            backend:
              serviceName: uploader-excel
              servicePort: 8080
